SynProdGITV1/force-app/main/default/objects/Account_Sales_Data__c/Account_Sales_Data__c.object-meta.xml
<CustomObject>
    <description>Object to store the sales data of an account</description>
    <label>Account Sales Data</label>
    <nameField>
        <displayFormat>ASD-{000000000}</displayFormat>
        <label>Account Sales Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Sales Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>