SynProdGITV1/force-app/main/default/objects/Account_Sales_Data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Sales Data</relationshipLabel>
    <relationshipName>Account_Sales_Data</relationshipName>
    <type>Lookup</type>
</CustomField>