SynProdGITV1/force-app/main/default/objects/Account_Sales_Data__c/fields/Account_Sales_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_External_ID__c</fullName>
    <description>Account Sales External ID - combination of Customer ID, Sales Org, Distribution Channel and Division</description>
    <externalId>true</externalId>
    <inlineHelpText>Combination of Customer ID, Sales Org, Distribution Channel and Division</inlineHelpText>
    <label>Account Sales External ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>