SynProdGITV1/force-app/main/default/objects/Account_Sales_Data__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <description>Specifies how products or services are delivered to customers</description>
    <inlineHelpText>Distribution channel replicated from S4</inlineHelpText>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Distribution_Channel</valueSetName>
    </valueSet>
</CustomField>