SynProdGITV1/force-app/main/default/objects/Account_Sales_Data__c/fields/Incoterms_Location__c.field-meta.xml
<CustomField>
    <fullName>Incoterms_Location__c</fullName>
    <description>Specify the location relevant to the selected Incoterm</description>
    <label>Incoterms Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>