SynProdGITV1/force-app/main/default/objects/Account_Sales_Data__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field helps define the credit terms offered to customers and is used for billing and invoicing processes.</description>
    <inlineHelpText>Payment term replicated from S4</inlineHelpText>
    <label>Payment Term</label>
    <referenceTo>Payment_Terms__c</referenceTo>
    <relationshipLabel>Account Sales Data</relationshipLabel>
    <relationshipName>Account_Sales_Data</relationshipName>
    <type>Lookup</type>
</CustomField>