SynProdGITV1/force-app/main/default/objects/Account_Sales_Data__c/fields/Sales_Org_Data__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the specific sales organization responsible for managing sales processes, order fulfilment, and customer interactions within various regions or entities.&quot;</description>
    <label>Sales Org Data</label>
    <referenceTo>Sales_Org_Data__c</referenceTo>
    <relationshipLabel>Account Sales Data</relationshipLabel>
    <relationshipName>Account_Sales_Data</relationshipName>
    <type>Lookup</type>
</CustomField>